--- a/munit-mock-db/src/main/app/mule-deploy.properties
+++ b/munit-mock-db/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Tue Apr 01 14:34:54 IST 2014
+#Wed Apr 02 12:05:43 IST 2014
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=
 domain=default
+config.resources=munitMockDB.xml
